--- a/glass.css
+++ b/glass.css
@@ -6,6 +6,7 @@
 }
 body {
   background-color: rgba(0, 0, 0, 0.9);
+  cursor: none;
 }
 body::before {
   content: "";
@@ -45,7 +46,6 @@ body::before {
   border-bottom: 2px solid rgba(151, 149, 149, 0.699);
   border-left: 1px solid rgba(233, 231, 231, 0.281);
   border-right: 1px solid rgba(233, 231, 231, 0.281);
-
   background-color: rgba(255, 255, 255, 0.1);
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.4);
   backdrop-filter: blur(3px);
