--- a/snake.css
+++ b/snake.css
@@ -18,5 +18,5 @@ body {
   );
   border-radius: 50%;
   transform: translate(-50%, -50%);
-  box-shadow: 0px 2px 20px rgb(160, 128, 219);
+  box-shadow: 0px 2px 10px rgb(160, 128, 219, 0.4);
 }
